[metadata]
# replace with your username:
name = icao-nnumber_converter
version = 0.1.0
author = Guillaume Michel
author_email = millaume.guichel@gmail.com
description = Script converting ICAO addresses to N-Numbers (Tail Numbers) and reciprocally.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guillaumemichel/icao-nnumber_converter
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
